# 941analytics

./: .gitignore  README.md  pyproject.toml  schema.sql
.claude/: CLAUDE.md
.claude/prds/: architecture-decisions.json  cicd-pipeline.json  config-standardization.json  data-export.json  date-ranges-filtering.json  enhanced-tracking.json  globe-optimization.json  infra-improvements.json  monolith-refactor.json  security-fixes.json  session-metrics.json  unified-analytics-v2.json
.github/workflows/: deploy-worker.yml  release.yml  test.yml
docs/: ARCHITECTURE_PROPOSAL.md  PRD.md
migrations/: 001_sites_configuration.sql  002_sessions_tracking.sql
src/analytics_941/: __init__.py  bots.py  client.py  config.py  models.py  referrer.py  routes.py  user_agent.py  utm.py
src/analytics_941/core/: __init__.py  client.py  models.py
src/analytics_941/routes/: __init__.py  dashboard.py
src/analytics_941/static/css/: dashboard.css
src/analytics_941/static/js/: dashboard.js  track.js
src/analytics_941/templates/: base.html
src/analytics_941/templates/components/: activity_feed.html  chart.html  chart_area.html  chart_bars.html  data_table.html  date_picker.html  export_button.html  stats_cards.html
src/analytics_941/templates/pages/: events.html  export_report.html  funnels.html  geography.html  goals.html  login.html  overview.html  realtime.html  sources.html  technology.html
src/analytics_941/templates/partials/: events_content.html  funnels_content.html  geography_content.html  goals_content.html  overview_content.html  realtime_content.html  saved_views_dropdown.html  sources_content.html  technology_content.html
tests/: test_analytics.py  test_date_ranges.py  test_filters.py  test_sessions.py
types/: analytics.d.ts
worker/: index.js  package-lock.json  package.json  schema.sql  vitest.config.ts  wrangler.toml
worker/src/: index.ts  utils.ts
worker/src/__tests__/: bot.test.ts  referrer.test.ts  validation.test.ts
