[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics-941"
version = "0.1.0"
description = "Privacy-first analytics for 941 Apps projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Blake Crosley", email = "blake@941apps.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_941"]
